Add exports arg